# V6

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
corpus/: README
include/v6_core/: index.h  tokenizer.h  vocab_store.h
include/v6_core/linguistics/: term_processor.h
include/v6_core/loader/: file_raii.h  file_system_loader.h  loader_interface.h  logger.h
include/v6_core/models/: document.h  parsed_element.h  query_result.h  term.h  types.h
include/v6_core/parser/: parser_interface.h  text_parser.h
include/v6_core/search/similarities/: cosine_similarity.h  similarity_base.h  utils.h
include/v6_core/search/weights/: tf_idf_weight.h  weight_base.h  weight_interface.h
src/v6_app/: main.cc
src/v6_core/: index.cc  tokenizer.cc  vocab_store.cc
src/v6_core/loader/: file_raii.cc  file_system_loader.cc  loader_interface.cc  logger.cc
src/v6_core/models/: document.cc  parsed_element.cc  query_result.cc  term.cc
src/v6_core/parser/: parser_interface.cc  text_parser.cc
src/v6_core/search/similarities/: cosine_similarity.cc
src/v6_core/search/weights/: tf_idf_weight.cc
src/v6_server/: main.cc
